--- a/netlify.toml
+++ b/netlify.toml
@@ -1,18 +1,7 @@
 [build]
-  command = "pnpm install && pnpm run build"
+  command = "pnpm build"
   publish = "dist"
-
-[[redirects]]
-  from = "/*"
-  to = "/index.html"
-  status = 200
 
 [build.environment]
   NODE_VERSION = "18"
-
-# Headers for Telegram Mini App
-[[headers]]
-  for = "/*"
-  [headers.values]
-    X-Frame-Options = "ALLOWALL"
-    Content-Security-Policy = "frame-ancestors 'self' https://web.telegram.org https://*.telegram.org"
+  PNPM_VERSION = "10.13.1"
