--- a/supabase/functions/place-bet/deno.json
+++ b/supabase/functions/place-bet/deno.json
@@ -1,5 +1,7 @@
 {
-    "tasks": {
-        "start": "deno run --allow-net --allow-env index.ts"
+    "functions": {
+        "place-bet": {
+            "noVerify": true
+        }
     }
 }
